fix iframe scroll on ios overflow

--- a/static/src/stylesheets/module/site-messages/_cmp-iframe.scss
+++ b/static/src/stylesheets/module/site-messages/_cmp-iframe.scss
@@ -10,7 +10,7 @@
     display: none;
     transition: background-color;
     transition-delay: .5s;
-    overflow: auto;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 
     &.cmp-iframe-ready {
